refactor(product): replace request DTOs with direct parameter validation
- Replace ProductListRequest DTO with individual @RequestParam annotations for cleaner API contracts
- Add @PageableDefault annotation to standardize pagination defaults across controllers (BrandController, ProductController)
- Remove manual PageRequest instantiation logic in favor of Spring's declarative pagination handling
- Inline ProductFilter construction directly in controller methods
- Add explicit validation constraints (@Size, @PositiveOrZero) on individual parameters
- Update ProductRepositoryImpl to support new filter construction pattern
- Simplify pagination handling by leveraging Spring Data Web's @PageableDefault resolver